<resources>
    <string name="app_name">Old People Care App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="FCM_CHANNEL_ID">FCM_ID</string>
    <string name="MedNotify">NEW NOTIFICATION</string>
    <string name="FCM_CHANNEL_STRING">FCM COMMING NOTIFICATION</string>
    <string name="time">  Time:</string>
    <string name="date">Date:</string>
    <string name="see_more">See More</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="view">View</string>
    <string name="new_medicine">New Medicine</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="description">Description</string>
    <string name="record">Record</string>
    <string name="time2">Time</string>
    <string name="add_new_medicine">Add New Medicine</string>
    <string name="sat">SAT</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="new_caregiver">New Caregiver</string>
    <string name="send_invitation">Send Invitation</string>
    <string name="enter_caregiver_email">Enter Caregiver Email</string>
    <string name="all_alarms">All Alarms</string>
    <string name="search_for_Userss">Search for Users</string>
    <string name="user_information">User Information</string>
    <string name="log_out">Log Out</string>
    <string name="care_giver_profile">Care Giver Profile</string>
    <string name="add_request">Add Request</string>
    <string name="chat">Chat</string>
    <string name="notifications">Notifications</string>
    <string name="all_caregivers">All Caregivers</string>
    <string name="write_message">"  Write Message "</string>
    <string name="chats">Chats</string>
    <string name="code_has_been_sent">Code has been sent !</string>
    <string name="please_check_your_inbox_and_click_the_received_code_to_reset_your_password">Please check your inbox and click the received code to reset your password</string>
    <string name="reset_password">Reset Password</string>
    <string name="code_digit">Code-Digit</string>
    <string name="didn_t_receive_the_message">Didn’t receive the message ?</string>
    <string name="resend">Resend</string>
    <string name="edit_medicine">Edit Medicine</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="edit_role">Edit Role</string>
    <string name="remove_role">Remove Role</string>
    <string name="need_help">Need Help ?</string>
    <string name="back">Back</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="don_t_worry_it_happens_please_enter_your_email_address_associated_with_your_account">Don’t Worry! it happens. Please enter your email address associated with your account</string>
    <string name="e_mail_address">E-Mail Address</string>
    <string name="remember_password">Remember Password?</string>
    <string name="login">Login</string>
    <string name="send_code">Send Code</string>
    <string name="log_in">Log In</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login2">LogIn</string>
    <string name="or">OR</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="don_t_have_account">Don\'t Have Account?</string>
    <string name="register">Register</string>
    <string name="upcoming">Upcoming</string>
    <string name="completed">Completed</string>
    <string name="missed_alarms">Missed Alarms</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="date_of_birth">"  Date Of Birth"</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="by_signing_up_you_agree_to_our">By Signing Up you agree to our</string>
    <string name="terms_amp_privacy_policy"><![CDATA[Terms & Privacy Policy]]></string>
    <string name="search_for_care_givers">Search For Care Givers</string>
    <string name="med_mate">MED MATE</string>
    <string name="at_our_core_we_are_dedicated_to_ensuring_that_you_have_the_support_and_the_right_time_to_take_your_medication">At our core, we are dedicated to ensuring that you have the support and the right time to take your medication</string>
    <string name="get_started">GET STARTED</string>
    <string name="loading">Loading....</string>
    <string name="time3">Time:</string>
    <string name="medicine_details">Medicine Details</string>
    <string name="repeated">Repeated:</string>
    <string name="description2">Description:</string>
    <string name="type">Type:</string>
    <string name="time4">Time:</string>
    <string name="record2">Record:</string>

    <string-array name="medicines">
        <item>Select Medicine Type</item>
        <item>pills</item>
        <item>injection</item>
        <item>drink</item>
        <item>other</item>

    </string-array>
    <string-array name="repeats">
        <item>Repeated When?</item>
        <item>Daily</item>
        <item>Weekly</item>

    </string-array>

    <string-array name="Repeat">
        <item>Hours:Mins</item>
        <item>Day</item>
        <item>Week</item>
    </string-array>

    <string-array name="caregivers">
        <item>   Select Caregiver Role</item>
        <item>   editor</item>
        <item>   viewer</item>
    </string-array>

    <string-array name="gender">
        <item>   Gender</item>
        <item>   male</item>
        <item>   female</item>
    </string-array>

    <string-array name="regist">
        <item>   Register As</item>
        <item>   caregiver</item>
        <item>   patient</item>
    </string-array>

</resources>