<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/CODE">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Authentication.CodeNo.CodeNumberFragment"
    android:background="#FFFFFF">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:maxLines="2"
        android:text="@string/code_has_been_sent"
        android:textAlignment="center"
        android:textColor="#008080"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="373dp"
        android:layout_height="286dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:srcCompat="@drawable/codeimf" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="388dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:text="@string/please_check_your_inbox_and_click_the_received_code_to_reset_your_password"
        android:textAlignment="center"
        android:textColor="#070707"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/codeX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/code_digit"
        app:endIconMode="clear_text"
        app:errorTextColor="#EF0C0C"
        app:hintTextColor="#008080"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:startIconDrawable="@drawable/code"
        app:startIconTint="@null">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/code"
            style="@style/MyHintTextStyle"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="31dp"
            android:background="@drawable/et_style"
            android:backgroundTint="#5CD9D9D9"
            android:drawablePadding="10dp"
            android:inputType="textEmailAddress"
            android:paddingRight="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/resetpassbtn"
        android:layout_width="330dp"
        android:layout_height="52dp"
        android:background="@drawable/button"
        android:backgroundTint="#008080"
        android:text="@string/reset_password"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/codeX"
        app:layout_constraintVertical_bias="0.13" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/didn_t_receive_the_message"
        android:textColor="#070707"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.297"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetpassbtn"
        app:layout_constraintVertical_bias="0.26999998" />

    <TextView
        android:id="@+id/resendbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="24dp"
        android:text="@string/resend"
        android:textColor="#008080"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView14" />

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="28dp"
        android:layout_height="18dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/greenback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>