<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/FORGET">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.Authentication.ForgetPassword.ForgetPasswordFragment"
        android:background="#FFFFFF">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="391dp"
            android:layout_height="269dp"
            android:layout_marginTop="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/forgetpass" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="201dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:maxLines="2"
            android:text="@string/forgot_password"
            android:textColor="#008080"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.076"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="378dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/don_t_worry_it_happens_please_enter_your_email_address_associated_with_your_account"
            android:textColor="#070707"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.515"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forgetemailX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/e_mail_address"
            app:endIconMode="clear_text"
            app:errorTextColor="#EF0C0C"
            app:hintTextColor="#008080"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13"
            app:startIconDrawable="@drawable/email"
            app:startIconTint="@null">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/forgetemail"
                style="@style/MyHintTextStyle"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginTop="31dp"
                android:background="@drawable/et_style"
                android:backgroundTint="#5CD9D9D9"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress"
                android:paddingRight="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/remember_password"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.347"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgetemailX" />

        <Button
            android:id="@+id/send_code"
            android:layout_width="330dp"
            android:layout_height="52dp"
            android:background="@drawable/button"
            android:backgroundTint="#008080"
            android:text="@string/send_code"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:cornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/loginbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="#008080"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView4" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="28dp"
            android:layout_height="18dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/greenback" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>