<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/CAREGIVERPROF"

    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        tools:context=".ui.PatientPath.UserInformation.BasicInformationFragment">


        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/care_giver_profile"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/backBtn"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="357dp"
            android:layout_height="10dp"
            android:src="@drawable/line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/greenback" />


        <androidx.cardview.widget.CardView
            android:id="@+id/pp"
            android:layout_width="105dp"
            android:layout_height="110dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#EEEEEE"
            app:cardBackgroundColor="#EEEEEE"
            app:cardCornerRadius="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3">

            <ImageView
                android:id="@+id/userpicture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/user_img" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mailtxtx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:editable="false"
            app:errorTextColor="#EF0C0C"
            app:hintTextColor="#008080"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/FullNameTXF"
            app:layout_constraintVertical_bias="0.19999999"
            app:startIconDrawable="@drawable/email"
            app:startIconTint="@null">


            <AutoCompleteTextView
                android:id="@+id/mailtxt"
                style="@style/MyHintTextStyle"
                android:layout_width="375dp"
                android:layout_height="47dp"
                android:layout_marginTop="31dp"
                android:background="@drawable/et_style"
                android:backgroundTint="#5CD9D9D9"
                android:drawablePadding="10dp"
                android:editable="false"
                android:fontFamily="@font/poppins_semibold"
                android:inputType="none"
                android:paddingRight="10dp"
                android:textColor="#000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phonetxtx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:clickable="false"
            android:editable="false"
            app:errorTextColor="#EF0C0C"
            app:hintTextColor="#008080"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mailtxtx"
            app:startIconDrawable="@drawable/phonee"
            app:startIconTint="@null">


            <AutoCompleteTextView
                android:id="@+id/phonetxt"
                style="@style/MyHintTextStyle"
                android:layout_width="375dp"
                android:layout_height="47dp"
                android:layout_marginTop="31dp"
                android:background="@drawable/et_style"
                android:backgroundTint="#5CD9D9D9"
                android:drawablePadding="10dp"
                android:editable="false"
                android:fontFamily="@font/poppins_semibold"
                android:inputType="none"
                android:paddingRight="10dp"
                android:textColor="#000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/datetxtx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:clickable="false"
            android:editable="false"
            app:errorTextColor="#EF0C0C"
            app:hintTextColor="#008080"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phonetxtx"
            app:startIconDrawable="@drawable/date"
            app:startIconTint="@null">


            <AutoCompleteTextView
                android:id="@+id/datetxt"
                style="@style/MyHintTextStyle"
                android:layout_width="375dp"
                android:layout_height="47dp"
                android:layout_marginTop="31dp"
                android:background="@drawable/et_style"
                android:backgroundTint="#5CD9D9D9"
                android:drawablePadding="10dp"
                android:editable="false"
                android:fontFamily="@font/poppins_semibold"
                android:inputType="none"
                android:paddingRight="10dp"
                android:textColor="#000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/gendertxtx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:clickable="false"
            android:editable="false"
            app:errorTextColor="#EF0C0C"
            app:hintTextColor="#008080"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/datetxtx"
            app:startIconDrawable="@drawable/gend"
            app:startIconTint="@null">


            <AutoCompleteTextView
                android:id="@+id/gendertxt"
                style="@style/MyHintTextStyle"
                android:layout_width="375dp"
                android:layout_height="47dp"
                android:layout_marginTop="31dp"
                android:background="@drawable/et_style"
                android:backgroundTint="#5CD9D9D9"
                android:drawablePadding="10dp"
                android:editable="false"
                android:fontFamily="@font/poppins_semibold"
                android:inputType="none"
                android:paddingRight="10dp"
                android:textColor="#000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/FullNameTXF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pp" />

        <Button
            android:id="@+id/addReq"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:text="@string/add_request"
            android:background="@drawable/btn_border"
            android:backgroundTint="#008080"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/chat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/FullNameTXF" />

        <Button
            android:id="@+id/chat"
            android:layout_width="150dp"
            android:layout_height="47dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/btn_border"
            android:backgroundTint="#CC5500"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/chat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/addReq"
            app:layout_constraintTop_toBottomOf="@+id/FullNameTXF" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>